# good_trpo_store

./: .gitignore  docker-compose.deploy.yaml  docker-compose.yaml
backend/: pyproject.toml  pyrightconfig.json
backend/dockerfiles/: sqlite.Dockerfile
backend/src/: database.py  db_metadata.py  init_db.py  rest.py  schemas.py
bot/: pyproject.toml
bot/dockerfiles/: Dockerfile
bot/src/: bot.py
